[package]
name = "tree-server"
version = "0.1.0"
authors = ["aceyin <aceyin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.5" }
